syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package productservice;

option go_package = "./ecommerce";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
  rpc greetUser(google.protobuf.Empty) returns (google.protobuf.StringValue);
}

message ProductID {
  string value = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
